--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -14,10 +14,27 @@ div#interface{
 header#cabecalho img#icone {
     position: absolute;
     left: 910px;
-    top: 40px;
+    top: 60px;
 }
 header#cabecalho {
-
+    border-bottom: 1px #606060 solid;
+    height: 150px;
+    background: url(../_imagens/glass-logo-peq.jpg) no-repeat 0px 100px;
+}
+header#cabecalho h1 {
+    font-family: Arial, sans-serif;
+    font-size: 30pt;
+    color: #606060;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
+    padding: 0px;
+    margin-bottom: 0px;
+}
+header#cabecalho h2 { 
+    font-family: Arial, sans-serif;
+    font-size: 15pt;
+    color: #888888;
+    padding: 0px;
+    margin-top: 0px;
 }
 p {
     text-align: justify;
