--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+@font-face {
+    font-family: 'FonteLogo';
+    src: url("../_fonts/bubblegum-sans-regular.otf")
+}
 body {
     background-color: #dddddd;
     color:black; 
@@ -22,7 +25,7 @@ header#cabecalho {
     background: url(../_imagens/glass-logo-peq.jpg) no-repeat 0px 100px;
 }
 header#cabecalho h1 {
-    font-family: Arial, sans-serif;
+    font-family: 'FonteLogo', sans-serif;
     font-size: 30pt;
     color: #606060;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
@@ -90,11 +93,31 @@ nav#menu li:hover {
 nav#menu h1 {
     display: none;
 }
-nav#menu a{
+nav#menu a {
     color: black;
     text-decoration: none;
     transition: color 1s;
 }
-nav#menu a:hover{
+nav#menu a:hover {
     color: white;
+}
+section#corpo {
+    display: block;
+    width: 500px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 20px;
+
+}
+aside#lateral {
+    display: block;
+    width: 350px;
+    float: right;
+}
+footer#rodape {
+    clear: both;
+    border-top: 1px solid #606060;
+}
+footer#rodape p{
+    text-align: center;
 }
